# ant_colony_optimizer

neuro-ant-optimizer/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml  streamlit_bt_dashboard.py
neuro-ant-optimizer/.github/workflows/: ci.yml
neuro-ant-optimizer/backtest/: backtest.py  plot_equity.py  reproduce.py  sample_returns.csv
neuro-ant-optimizer/bench/: bench.py  bench_results.csv  plot_sharpe.py
neuro-ant-optimizer/conda/: bld.bat  build.sh  meta.yaml
neuro-ant-optimizer/data/: benchmark.csv  benchmark_sp500.csv  factors.csv  factors_style.csv  factors_weekly.csv  returns.csv  returns_weekly.csv
neuro-ant-optimizer/docs/: artifacts.md  config.md  cookbook.md  index.md  optimizer_behavior_report.md  reproducibility.md  slow_test_guide.md
neuro-ant-optimizer/examples/: quickstart.py
neuro-ant-optimizer/examples/configs/: active_box.yaml  daily_oas.yaml  minimal.yaml  weekly_oas_factors.yaml  weekly_subset.yaml
neuro-ant-optimizer/examples/data/: benchmark.csv  benchmark_sp500.csv  factors.csv  factors_style.csv  factors_weekly.csv  returns_daily.csv  returns_weekly.csv
neuro-ant-optimizer/examples/notebooks/: 01_backtest_quickstart.ipynb  02_factor_diagnostics.ipynb
neuro-ant-optimizer/neuro_ant_optimizer/: __init__.py
neuro-ant-optimizer/scripts/: count_loc.py  quickstart.py  run_slow_checks.py
neuro-ant-optimizer/src/fastapi/: __init__.py  responses.py  testclient.py
neuro-ant-optimizer/src/neuro_ant_optimizer/: __init__.py  colony.py  constraints.py  models.py  optimizer.py  py.typed  refine.py  runid.py  utils.py
neuro-ant-optimizer/src/neuro_ant_optimizer/attribution/: brinson.py  factors.py
neuro-ant-optimizer/src/neuro_ant_optimizer/backtest/: __init__.py  __main__.py  backtest.py  reproduce.py
neuro-ant-optimizer/src/neuro_ant_optimizer/constraints/: __init__.py  validators.py
neuro-ant-optimizer/src/neuro_ant_optimizer/data/: __init__.py  calendars.py  loader.py
neuro-ant-optimizer/src/neuro_ant_optimizer/examples/: __init__.py
neuro-ant-optimizer/src/neuro_ant_optimizer/intraday/: __init__.py  cli.py  engine.py
neuro-ant-optimizer/src/neuro_ant_optimizer/live/: __init__.py  broker.py  cli.py
neuro-ant-optimizer/src/neuro_ant_optimizer/portfolio/: baselines.py
neuro-ant-optimizer/src/neuro_ant_optimizer/registry/: __init__.py  s3.py
neuro-ant-optimizer/src/prometheus_client/: __init__.py  parser.py
neuro-ant-optimizer/src/psutil/: __init__.py
neuro-ant-optimizer/src/service/: app.py  metrics.py
neuro-ant-optimizer/tests/: conftest.py  property_metrics.py  test_active_constraints.py  test_backtest_baseline.py  test_backtest_cli_determinism.py  test_backtest_config_manifest.py  test_backtest_custom_plugins.py  test_backtest_drawdown_contrib.py  test_backtest_dry_run.py  test_backtest_factors_slippage.py  test_backtest_json_logging.py  test_backtest_minimal_csv.py  test_backtest_perf_toggles.py  test_backtest_rebalance_report.py  test_backtest_refine_every.py  test_backtest_risk_free.py  test_backtest_scenarios.py  test_backtest_smoke.py  test_backtest_sweep.py  test_backtest_weights_no_pandas.py  test_baselines_tc.py  test_benchmark_objectives.py  test_bootstrap_cv.py  test_brinson.py  test_broker_sim.py  test_colony_feasibility.py  test_config_unknown_key.py  test_config_validation_errors.py  test_config_validation_happy.py  test_constraints.py  test_cov_determinism.py  test_cov_models.py  test_decay_blend_math.py  test_drop_duplicates.py  test_factor_attr_ic.py  test_factor_contrib.py  test_factor_validation.py  test_factors_and_sectors.py  test_gamma_by_sector.py  test_health_ready.py  (+32 more)
(+11 files in other folders)
