[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["neuro_ant_optimizer*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
neuro_ant_optimizer = ["py.typed", "examples/configs/*.yaml"]

[project]
name = "neuro-ant-optimizer"
version = "0.4.0"
description = "Neural-guided Ant Colony Portfolio Optimizer with robust constraints"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
authors = [{name="Quantitative Research Team"}]
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "torch>=2.0",
  "scipy>=1.10",
  "psutil>=5.9",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Investment",
]

[project.urls]
Documentation = "https://github.com/quantresearch/neuro-ant-optimizer"
Source = "https://github.com/quantresearch/neuro-ant-optimizer"

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.5.0",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "mkdocs>=1.5",
  "hypothesis>=6.100",
  "mutmut>=2.4",
]
backtest = ["pandas>=2.0", "matplotlib>=3.7", "pydantic>=2.7"]
docs = ["mkdocs>=1.5"]

[project.scripts]
neuro-ant-backtest = "neuro_ant_optimizer.backtest.backtest:main"

[tool.pytest.ini_options]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
